--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -10,6 +10,12 @@ body {
   margin: auto;
 }
 
+section:before {
+  content: '';
+  display: block;
+  height: 40px;
+}
+
 section h2 {
   margin: 0;
   padding-top: 2em;
